[project]
name = "rag-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "langchain>=0.3.27",
    "matplotlib>=3.10.5",
    "mistralai>=1.9.7",
    "numpy==2.2.2",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.0",
]
